syntax = "proto3";

package storage;

service StorageService {
  rpc UploadChunk (Chunk) returns (UploadStatus) {}
  rpc DownloadChunk (ChunkRequest) returns (Chunk) {}
  rpc ReplicateChunk (Chunk) returns (ReplicationStatus) {}
}

message Chunk {
  string id = 1;
  bytes data = 2;
  string checksum = 3;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message ChunkRequest {
  string id = 1;
}

message ReplicationStatus {
  bool success = 1;
  string message = 2;
}
